# speechbrain-recipes

./: .gitignore  LICENSE  README.md  pyproject.toml  run_experiment.sh  slurm_wrapper.sh
recipes/VoxCeleb/SpeakerRec/: README.md  speaker_verification_plda.py  train_ecapa_tdnn.sh  train_speaker_embeddings.py  train_xvector_network.sh  voxceleb2_convert_to_wav.py
recipes/VoxCeleb/SpeakerRec/hparams/: train_ecapa_tdnn.yaml  train_x_vectors.yaml  train_x_vectors_shards.yaml  verification_plda_xvector.yaml
recipes/VoxCeleb/SpeakerRec/hparams/reproduce/ecapa/v1/: train_ecapa_tdnn.yaml
recipes/VoxCeleb/SpeakerRec/hparams/reproduce/xvector/v1/: test_xvector_network_plda.sh  train_x_vectors.yaml  train_xvector_network.sh  verification_plda_xvector.yaml
recipes/VoxCeleb/SpeakerRecShards/: util.py  voxceleb_create_val_split.py  voxceleb_create_webdatasets.py
requirements/: requirements_cuda101.txt  requirements_cuda111.txt
