[tool.poetry]
name = "speechbrain-recipes"
version = "0.1.0"
description = "Custom recipes for SpeechBrain"
authors = ["Nik Vaessen <git@mail.vaessen.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
speechbrain = "^0.5.4"
webdataset = "^0.1.54"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
